<resources>
    <string name="app_name">UGD4_PBP_9618</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="updateT">Update Employee</string>
    <string name="addT">Add Employee</string>
    <string name="numberI">Input number</string>
    <string name="nameI">Input name</string>
    <string name="ageI">Input age</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="title_main">List Of Employee</string>
    <string name="search">Search by name</string>
</resources>